--- a/style.css
+++ b/style.css
@@ -66,9 +66,27 @@ form button{
     background-color:white;
     cursor:pointer;
 }
+
 form button:hover{
     border: 5px solid #2361AE;
     color:#2361AE;
+}
+
+#date{
+    border: 3px solid rgb(7, 2, 71);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    color: rgb(7, 2, 71);
+    margin-right: 20px;
+    margin-left: 20px;
+    background-color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.4rem;
 }
 
 select{
@@ -86,6 +104,7 @@ select{
     background-color: white;
     padding: 0.4rem;
 }
+
 .select{
     margin: 1rem;
     position: relative;
@@ -177,4 +196,40 @@ footer{
 .del {
     transform: translateY(4rem) scale(0.4) rotateZ(20deg);
     opacity: 0;
+}
+
+@media screen and (max-width: 760px ) {
+    
+    body{
+        width:350px;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+     }
+     
+     #date{
+        width:350px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+     }
+     .select{
+        width:350px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    form{
+        width:350px;
+        display: flex;
+        justify-content: center;
+        align-items: center; 
+        flex-direction: column;
+    }
 }
